# tricode_academic_helper

./: ReadMe  cosas.txt
Rust-Backend/: .env  Cargo.toml  INTEGRATION_GUIDE.md  MULTIPLE_ROLES_UPDATE.md  README.md  SUPABASE_CONFIG_SUMMARY.md  SUPABASE_SETUP.md  schema_add_missing.sql  schema_complete.sql  verify_supabase.ps1  verify_supabase.sh
Rust-Backend/src/: app.rs  config.rs  db.rs  main.rs  middleware.rs  models.rs  routes.rs
Rust-Backend/src/handlers/: auth.rs  mentor.rs  mod.rs  student.rs  teacher.rs
mi-next-app/: README.md  next.config.ts  package-lock.json  package.json
mi-next-app/src/app/: globals.css  layout.tsx  page.tsx
mi-next-app/src/app/auth/: AuthPage.tsx
mi-next-app/src/app/dashboard/mentor/: page.tsx
mi-next-app/src/app/dashboard/student/: page.tsx
mi-next-app/src/app/info_module/: info_page.tsx
mi-next-app/src/app/login/: LoginForm.tsx  page.tsx
mi-next-app/src/app/nabvar/: nabvar.tsx
mi-next-app/src/app/register/: RegisterForm.tsx  page.tsx
mi-next-app/src/app/unauthorized/: page.tsx
mi-next-app/src/components/: ProtectedRoute.tsx
mi-next-app/src/hooks/: useAuth.tsx
mi-next-app/src/lib/: api.ts  types.ts
mi-next-app/src/lib/services/: auth.ts  mentor.ts  student.ts  teacher.ts
proyecto HTML/Logout/: logout.php
proyecto HTML/login/: conexion.php  index.php  login.php  script.js  style.css
proyecto HTML/main/: index.html  style.css
proyecto HTML/panel/: index.php  style.css
proyecto HTML/panel/home/: index.php  style.css
proyecto HTML/register/: index.php  registro.php  script.js  style.css
(+13 files in other folders)
