[package]
name = "tricode-mentoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
postgres = "0.19"

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP & Middleware
actix-cors = "0.6"
futures = "0.3"
bytes = "1"

# Environment Variables
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# Error Handling
anyhow = "1"
thiserror = "1"

# Real-time (WebSocket)
actix-ws = "0.1"

[profile.release]
opt-level = 3
